changed video sizing
changed video sizing

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -797,7 +797,7 @@
 					<key>page13 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-28T18:58:43Z</date>
+						<date>2018-03-28T19:06:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -966,11 +966,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Uh5hNrE911Eg
-								qXGvhGFS1w==
+								SGv2sCS9XuJu
+								sEGJfjZgbw==
 								</data>
 								<key>Size</key>
-								<integer>149667</integer>
+								<integer>152241</integer>
 							</dict>
 							<key>files/stacks_page_page13.js</key>
 							<dict>
@@ -986,11 +986,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pmKiYWgNlYAT
-								u+ckMEDmZw==
+								LvkqAxqtsaqN
+								NPAimxuRKw==
 								</data>
 								<key>Size</key>
-								<integer>60218</integer>
+								<integer>60941</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5327,7 +5327,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-28T18:58:43Z</date>
+						<date>2018-03-28T19:06:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5376,11 +5376,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								v44n+2LrRfLY
-								x6I6XCS/tg==
+								K5EzxUm7ZRpb
+								Koc7fd5rZQ==
 								</data>
 								<key>Size</key>
-								<integer>3162</integer>
+								<integer>3194</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5393,7 +5393,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-28T17:05:09Z</date>
+						<date>2018-03-28T19:06:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
