--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/3-Press-0026-Media/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/3-Press-0026-Media/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-28T18:58:43Z</date>
+						<date>2018-03-28T19:06:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -202,11 +202,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Uh5hNrE911Eg
-								qXGvhGFS1w==
+								SGv2sCS9XuJu
+								sEGJfjZgbw==
 								</data>
 								<key>Size</key>
-								<integer>149667</integer>
+								<integer>152241</integer>
 							</dict>
 							<key>files/stacks_page_page13.js</key>
 							<dict>
@@ -222,11 +222,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								pmKiYWgNlYAT
-								u+ckMEDmZw==
+								LvkqAxqtsaqN
+								NPAimxuRKw==
 								</data>
 								<key>Size</key>
-								<integer>60218</integer>
+								<integer>60941</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
