deleted extra bit in funding section
deleted extra bit in funding section

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -1877,7 +1877,7 @@
 					<key>page25 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-28T18:58:43Z</date>
+						<date>2018-03-28T19:17:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1901,16 +1901,6 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
-							</dict>
-							<key>files/stacks-image-6980f10-148x122.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								SEAeNA9KCw5Q
-								I3lbIhtOIA==
-								</data>
-								<key>Size</key>
-								<integer>23393</integer>
 							</dict>
 							<key>files/stacks-image-9d5546e-150x188.png</key>
 							<dict>
@@ -1976,11 +1966,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FXJITCvHCOF2
-								eVRUs0BUYw==
+								MUPojIAlGd5n
+								TWCI1v795g==
 								</data>
 								<key>Size</key>
-								<integer>47699</integer>
+								<integer>47026</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5327,7 +5317,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-28T19:06:47Z</date>
+						<date>2018-03-28T19:17:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5376,11 +5366,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								K5EzxUm7ZRpb
-								Koc7fd5rZQ==
+								v44n+2LrRfLY
+								x6I6XCS/tg==
 								</data>
 								<key>Size</key>
-								<integer>3194</integer>
+								<integer>3162</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5393,7 +5383,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-28T19:06:47Z</date>
+						<date>2018-03-28T19:17:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6432,11 +6422,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3ag0AvH8MaFQ
-								YpFqzC1nsw==
+								vokHnv6bDBle
+								3UtETOgyRA==
 								</data>
 								<key>Size</key>
-								<integer>2051</integer>
+								<integer>1963</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
