Start of funding for students page

--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/Contents.plist
@@ -18,7 +18,8 @@
 				<string>3-Masters-in-Complex-Systems-and-Data-Science</string>
 				<string>4-PhD-in-Complex-Systems-and-Data-Science</string>
 				<string>5-Sample-lectures</string>
-				<string>6-All-courses</string>
+				<string>6-Potential-funding</string>
+				<string>7-All-courses</string>
 			</array>
 		</dict>
 	</array>
