--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Potential-funding/PageAttributes/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/6-Potential-funding/PageAttributes/Contents.plist
@@ -48,11 +48,11 @@ margin-bottom:1rem;
 				<key>FilenameExtension</key>
 				<string>html</string>
 				<key>FolderName</key>
-				<string>phd</string>
+				<string>funding</string>
 				<key>HasCustomThemeStyle</key>
 				<false/>
 				<key>Hidden</key>
-				<false/>
+				<true/>
 				<key>ImageFormat</key>
 				<string>Original</string>
 				<key>ImageQuality</key>
