--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-16T23:39:22Z</date>
+						<date>2018-04-23T20:59:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -157,6 +157,26 @@
 								</data>
 								<key>Size</key>
 								<integer>64767</integer>
+							</dict>
+							<key>files/stacks-image-7ceb613-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								+tv/HsN8D/Dd
+								+mwdKel4Zg==
+								</data>
+								<key>Size</key>
+								<integer>107548</integer>
+							</dict>
+							<key>files/stacks-image-7ceb613-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								KXvmS9DAvlAp
+								SxELDYlXxQ==
+								</data>
+								<key>Size</key>
+								<integer>380074</integer>
 							</dict>
 							<key>files/stacks-image-810c5f5-98x98.jpg</key>
 							<dict>
@@ -322,11 +342,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								V5gzBgXVi/km
-								/dQAvqFDJw==
+								wg8aygCE0EvP
+								EQ0+wNfhYA==
 								</data>
 								<key>Size</key>
-								<integer>176982</integer>
+								<integer>179994</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -352,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								x70GiYWw/ncw
-								pKzYFBmlVQ==
+								FTWOuyHHAGGb
+								4E0Sj29T+g==
 								</data>
 								<key>Size</key>
-								<integer>91160</integer>
+								<integer>94662</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
