--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-16T23:39:22Z</date>
+						<date>2018-04-23T20:59:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -98,6 +98,16 @@
 								<key>Size</key>
 								<integer>337058</integer>
 							</dict>
+							<key>files/stacks-image-1cd049f-250x256.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								jDouJEb5UOgP
+								r0dDWJlwxQ==
+								</data>
+								<key>Size</key>
+								<integer>105930</integer>
+							</dict>
 							<key>files/stacks-image-3edeb52-98x98.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -117,6 +127,26 @@
 								</data>
 								<key>Size</key>
 								<integer>7818</integer>
+							</dict>
+							<key>files/stacks-image-4935364-261x251.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								pUhB5Fqnu3YS
+								YA9dT+6AqA==
+								</data>
+								<key>Size</key>
+								<integer>126611</integer>
+							</dict>
+							<key>files/stacks-image-4935364-261x251@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								qhWr5oOEZqif
+								DGH4sagTCw==
+								</data>
+								<key>Size</key>
+								<integer>462108</integer>
 							</dict>
 							<key>files/stacks-image-6accef7-150x150.png</key>
 							<dict>
@@ -168,6 +198,26 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
+							<key>files/stacks-image-8364b1f-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								54Pi3j6G6/2E
+								lZMvrz7LCQ==
+								</data>
+								<key>Size</key>
+								<integer>82434</integer>
+							</dict>
+							<key>files/stacks-image-8364b1f-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								jkc9i4T4u9l6
+								TAQpPAe0oA==
+								</data>
+								<key>Size</key>
+								<integer>279051</integer>
+							</dict>
 							<key>files/stacks-image-86b04b6-296x300.png</key>
 							<dict>
 								<key>Digest</key>
@@ -218,6 +268,16 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
+							<key>files/stacks-image-b5d4a25-261x251.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								X4LIM0pJmROb
+								OoK7OiXgTw==
+								</data>
+								<key>Size</key>
+								<integer>103555</integer>
+							</dict>
 							<key>files/stacks-image-bcdb310-250x260.png</key>
 							<dict>
 								<key>Digest</key>
@@ -262,11 +322,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jlkf9Icn9FsH
-								hnICSSvb1w==
+								gpe1k+58cThE
+								OEurgqdYTQ==
 								</data>
 								<key>Size</key>
-								<integer>161752</integer>
+								<integer>178496</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -292,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YDQjIu575rt0
-								NuL3uJc1eg==
+								eu+TF6XeuJyD
+								jtMcd4vmuA==
 								</data>
 								<key>Size</key>
-								<integer>76126</integer>
+								<integer>91960</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
